Revert "1st version"
This reverts commit 009e030d0da6e64c36fbe3c2de41638bf1a89561.